[package]
name = "kay"
description = "Experimental high-performance actor system framework for Rust"
version = "0.5.1"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/kay"
license = "MIT"
edition = "2024"

[badges]
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1"
chunky = "0.3.7"
compact = {git = "https://github.com/hsiang-lee/compact.git", rev = "5018c65c9a"}
compact_macros = "0.1.0"
url ="2.5.7"
serde = {version = "1.0", optional = true}
serde_derive = {version = "1.0", optional = true}

[dependencies.tungstenite]
version = "0.27.0"
optional = true
features = ["handshake"]

[dependencies.stdweb]
version = "0.4.20"
optional = true

[features]
default = ["server"]
server = ["tungstenite", "chunky/mmap"]
browser = ["stdweb"]
serde-serialization = ["serde", "serde_derive"]